2008-03-03  Jim Evins  <evins@snaught.com>

	* configure.in:
	* ko.po:
		Added korean translation provided by xein@naver.com.
	
2008-02-21  Jim Evins  <evins@snaught.com>

	* src/ui.c:
		Fixed typo that prevented "Save" from being deactivated when
		document is not modified.
	
2008-02-18  Jim Evins  <evins@snaught.com>

	* src/prefs-model.c: (gl_prefs_model_save_settings),
	(gl_prefs_model_load_settings):
		Set default units for file output.

2008-02-18  Jim Evins  <evins@snaught.com>

	* help/C/glabels.xml:
		Fixed example template.

2008-02-16  Jim Evins  <evins@snaught.com>

	* AUTHORS:
	* data/templates/avery-iso-templates.xml:
	* data/templates/avery-us-templates.xml:
	* data/templates/misc-iso-templates.xml:
	* data/templates/misc-us-templates.xml:
		Caught up on user submitted templates.

2008-02-04  Jim Evins  <evins@snaught.com>

	* src/view-image.c: (update_object_from_editor_cb):
		Bug #1886438.  Don't update the image size unless it is actually
		triggered by a change in image source.  The result of this bug
		was that any attempt to edit the size spinboxes, immediately
		reset the size.
	
2008-02-03  Jim Evins  <evins@snaught.com>

	* src/label-image.c: (gl_label_image_class_init), (set_size):
		Enforce minimum size for images.

2008-02-03  Jim Evins  <evins@snaught.com>

	* src/object-editor-edit-page.c: (field_selected_cb):
	* src/object-editor-lsize-page.c: (gl_object_editor_set_max_lsize):
	* src/object-editor-private.h:
	* src/object-editor-shadow-page.c:
	(gl_object_editor_set_max_shadow_offset):
	* src/object-editor-size-page.c: (gl_object_editor_set_max_size):
	* src/object-editor.c: (gl_object_editor_finalize),
	(gl_object_editor_new), (gl_object_notebook_construct_valist),
	(label_changed_cb):
	* src/object-editor.h:
	* src/ui-sidebar.c: (gl_ui_sidebar_construct):
	* src/view-barcode.c: (construct_properties_editor):
	* src/view-box.c: (construct_properties_editor):
	* src/view-ellipse.c: (construct_properties_editor):