@@ -9,6 +9,7 @@ templates_DATA = \
 	avery-iso-templates.xml \
 	avery-other-templates.xml \
 	zweckform-iso-templates.xml \
+	brother-other-templates.xml \
 	misc-us-templates.xml \
 	misc-iso-templates.xml \
 	misc-other-templates.xml
